--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -22,7 +22,7 @@ webdriver {
 headless.mode = true
 
 serenity {
-  test.root = todomvc.features
+  test.root = test
   compress.filenames = false
 //  take.screenshots = FOR_FAILURES
 }
